# iit-relax-ros-pkg

./: .gitignore  CMakeLists.txt  GenerateDeb.cmake  LICENSE  README.md
relax_cartesio/: CMakeLists.txt  README.md  mir.launch  package.xml  relax.launch  relax.rviz  relax_arm.launch  relax_arm_force_estimation.launch  relax_arm_impedance_stack.yaml  relax_arm_stack.yaml  relax_gcomp.launch  relax_manipulation.launch  relax_manipulation_stack.yaml  relax_stack.yaml
relax_cartesio/config/: mir_stack.yaml  relax_arm_stack.yaml  relax_stack.yaml
relax_cartesio/launch/: mir.launch  relax.launch  relax_arm.launch
relax_cartesio/python/: .relax_interaction_driving.py.swp  relax_gym.py  relax_interaction_driving.py  relax_poses.py
relax_cartesio/src/: pick_and_place.py  pick_and_place_log_2022_07_28__19_02_30.mat  single_joint_cyclic.py
relax_cartesio_config/: CMakeLists.txt  centauro_wheeled_motion.launch  centauro_wheeled_motion_stack.yaml  package.xml  relax.rviz  relax_cartesio.launch  relax_stack.yaml
relax_config/: CMakeLists.txt  mir_basic.yaml  package.xml  relax.rviz  relax_arm_basic.yaml  relax_basic.yaml  relax_xbot_config.yaml
relax_config/hal/: relax_dummy.yaml  relax_gz.yaml  relax_mir_test.yaml
relax_gazebo/: CMakeLists.txt  manifest.xml  package.xml
relax_gazebo/database/: database.config
relax_gazebo/launch/: relax_simple_world.launch  relax_world.launch
relax_gazebo/worlds/: relax.world  (+1 more)
relax_gui_tests/: README.md  launch_relax.launch  mission_Simulated RELAX navigation test (1).json  mission_Start ROS CONTROL SERVICE (1).json  mission_TeachingMission.json  relax_joint_trajectory.json  relax_settings (1).json  settings_relax_cloud_demo_no_simulation.json  startRELAX.bash
relax_ros_control/: CMakeLists.txt  README.md  package.xml
relax_srdf/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
relax_test/: gz_test.py
relax_urdf/: CMakeLists.txt  manifest.xml  package.xml
relax_urdf/docs/: Tmatrix_link1-link2.docx  tmatrix_link2-link3.docx  tmatrix_link3-link4.docx  tmatrix_link4-link5.docx  tmatrix_link5-link6.docx  tmatrix_mobile-base-left-wheel.docx  tmatrix_mobile-base-link1.docx
relax_urdf/docs/inertia/: urdf_link1.docx  urdf_link2.docx  urdf_link3.docx  urdf_link4.docx  urdf_link5.docx
relax_urdf/docs/update_urdf/: .~lock.URDF REALX arm.docx#  .~lock.relax t-matrixes.docx#  URDF REALX arm.docx  relax t-matrixes.docx
relax_urdf/docs/update_urdf/meshes/arm/: mesh_shoulder-pitch.stl  mesh_wrist-yaw.stl
relax_urdf/launch/: relax.launch  relax.rviz  relax_arm_slider.launch  relax_capsules_slider.launch  relax_fake_base_slider.launch  relax_mobile_base_slider.launch  relax_slider.launch
relax_urdf/meshes/: mesh_teraflex-ring.stl  mesh_wrist-pitch.stl
relax_urdf/rviz/: relax.rviz
relax_urdf/scripts/: create_urdf_srdf_sdf.sh
relax_urdf/urdf/: mir.urdf  relax.gv  relax.urdf  relax.urdf.xacro  relax_arm.urdf  relax_arm.urdf.xacro  relax_arm_capsule.urdf  relax_arm_teraflex.urdf  relax_base.urdf.xacro  relax_base_xbot2.urdf.xacro  relax_capsule.urdf  relax_capsule_pinocchio.urdf  relax_config.urdf.xacro  relax_control.urdf  relax_mir.urdf  relax_robot.urdf.xacro  relax_utils.urdf.xacro  relax_virtual_frame.urdf  relax_xbot2.urdf  relax_xbot2.urdf.xacro  try.urdf
relax_urdf/urdf/config/: relax.urdf.xacro  relax_arm.urdf.xacro  relax_fake_base.urdf.xacro  relax_fixed_base.urdf.xacro  relax_floating_base.urdf.xacro  relax_gazebo.urdf.xacro  relax_mir.urdf.xacro  relax_mobile_base.urdf.xacro  relax_virtual_frame.urdf.xacro  relax_xbot2.urdf.xacro
relax_urdf/urdf/gazebo/: materials.gazebo.xacro  mir.gazebo.xacro  relax.gazebo.xacro  relax_materials.gazebo.xacro  xbot.gazebo.xacro
relax_urdf/urdf/parts/: .relax_arm.urdf.xacro.kate-swp  arm.urdf.xacro  ball.urdf.xacro  common_base_properties.urdf.xacro  dynamic_properties.urdf.xacro  fake_base.urdf.xacro  inertial_properties.urdf.xacro  kinematics_properties.urdf.xacro  limits.urdf.xacro  mir_base.urdf.xacro  mir_base_xbot2.urdf.xacro  mobile_base.urdf.xacro  relax_arm.urdf.xacro  relax_arm_macro.urdf.xacro  relax_core.urdf.xacro  relax_ee_macro.urdf.xacro  sick_s300.urdf.xacro  teraflex_ring.urdf.xacro  teraflex_ring_inertial_properties.urdf.xacro  teraflex_ring_kinematics_properties.urdf.xacro  virtual_frame.urdf.xacro  wheels.urdf.xacro
relax_urdf/urdf/parts/mir/: base_properties.urdf.xacro  mir_base_macro.urdf.xacro  sick_s300.urdf.xacro  wheels.urdf.xacro
relax_urdf/urdf/properties/: inertial_properties.urdf.xacro  kinematics_properties.urdf.xacro  limits.urdf.xacro  materials.urdf.xacro  utils.urdf.xacro
(+23 files in other folders)
